# strategy-hub

./: .gitignore  CHANGELOG.md  README.md  db copy 2.sqlite3  db copy.sqlite3  db.sqlite3  project-description-md  pyproject.toml  requirements.txt  technical-design.md
config/: menu.py  settings.py  urls.py
controlling/: admin.py  apps.py  models.py  services.py  tests.py  urls.py  views.py
controlling/migrations/: 0001_initial.py  0002_alter_controllingperiod_options_and_more.py  0003_controllingperiod_strategy.py  0004_remove_controllingperiod_year_and_month.py  0005_remove_controllingperiod_actuals_deadline_and_more.py  0006_remove_controllingperiod_is_locked.py  0007_alter_controllingperiod_status_and_more.py  0008_controllingrecord_aufwand_status_manual_and_more.py  0009_controllingperiod_mail_settings.py  0010_controllingrecord_status_as_code_fk.py  0011_controllingrecord_ampel_allgemein_and_more.py  0012_alter_controllingrecord_remarks_controlling_and_more.py
core/: admin.py  context_processors.py  iommi.py  models.py  strategy_context.py  tests.py  versioning.py
core/migrations/: 0001_initial.py
dashboard/: tests.py  views.py
docs/: HILFE.md
fake_data/: controlling_periods.csv  controlling_record_responsibilities.csv  controlling_records.csv  functions.csv  measure_responsibilities.csv  measure_types.csv  people.csv  strategies.csv  strategy_levels.csv  users.csv
people/: admin.py  models.py  urls.py  views.py
reports/: admin.py  models.py  urls.py  views.py
strategies/: admin.py  models.py  tests.py  urls.py  views.py
(+36 files in other folders)
