[project]
name = "strategy-hub"
version = "0.3.0"
description = "Strategy Hub for strategy management and controlling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.1,<5.3",
    "iommi>=7.18",
    "Markdown>=3.8",
    "plotly>=6.0",
    "psycopg[binary]>=3.2",
    "Pillow>=11.0",
    "django-storages[s3]>=1.14.6",
    "gunicorn>=23.0",
    "whitenoise>=6.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.11",
    "ruff>=0.12",
]

[tool.uv]
package = false

[tool.strategy_hub]
version_date = "2026-03-05"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.ruff]
line-length = 100
target-version = "py312"
